# backend-example

./: .replit  db.sqlite3  pyproject.toml  run-dev.sh
django_project/: settings.py  urls.py
ecommerce/: admin.py  api.py  models.py
ecommerce/migrations/: 0001_initial.py
